--- a/package.json
+++ b/package.json
@@ -6,9 +6,34 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "lint": "eslint \"src/**/*.{js,ts,astro}\"",
+    "lint:fix": "eslint --fix \"src/**/*.{js,ts,astro}\"",
+    "format": "prettier --write \"src/**/*.{ts,js,astro,css,md}\"",
+    "prepare": "husky install"
   },
   "dependencies": {
     "astro": "^5.7.10"
+  },
+  "devDependencies": {
+    "@tailwindcss/vite": "^4.1.5",
+    "@typescript-eslint/eslint-plugin": "^8.31.1",
+    "@typescript-eslint/parser": "^8.31.1",
+    "astro-eslint-parser": "^1.2.2",
+    "eslint": "^9.26.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-astro": "^1.3.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.6",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.1",
+    "prettier": "^3.5.3",
+    "tailwindcss": "^4.1.5"
+  },
+  "lint-staged": {
+    "src/**/*.{js,ts,astro}": [
+      "pnpm run lint",
+      "pnpm run format"
+    ]
   }
 }
