--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,16 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "always"
   },
-  "editor.formatOnSave": true,
   "eslint.validate": ["javascript", "typescript", "astro"],
   "tailwindCSS.includeLanguages": {
     "astro": "html"
+  },
+  "editor.formatOnSave": true,
+  "editor.formatOnPaste": true,
+
+  "prettier.documentSelectors": ["**/*.astro"],
+
+  "[astro]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   }
 }
