--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "astro-eslint-parser": "^1.2.2",
     "eslint": "^9.26.0",
     "eslint-config-prettier": "^10.1.2",
+    "eslint-import-resolver-typescript": "^4.3.4",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.6",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.1",
     "prettier": "^3.5.3",
+    "prettier-plugin-astro": "^0.14.1",
     "tailwindcss": "^4.1.5"
   },
   "lint-staged": {
