--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "astro": "^5.7.10"
+    "astro": "^5.7.10",
+    "astro-navbar": "^2.3.9"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.5",
