--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "astro": "^5.7.10",
-    "astro-navbar": "^2.3.9"
+    "astro-navbar": "^2.3.9",
+    "sharp": "^0.34.1"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.5",
